The program's name changes with the langage

--- a/projetp1/src/com/github/projetp1/messages_fr.properties
+++ b/projetp1/src/com/github/projetp1/messages_fr.properties
@@ -28,5 +28,6 @@ MainView.Space=Espace
 MainView.Speed=Vitesse de transmission
 MainView.StarName=Nom de l'astre
 MainView.Stopbits=Bits d'arrêt
+MainView.Title=Projet P1
 MainView.XONXOFF_IN=XONXOFF IN
 MainView.XONXOFF_OUT=XONXOFF OUT
