--- a/projetp1/src/com/github/projetp1/messages_en.properties
+++ b/projetp1/src/com/github/projetp1/messages_en.properties
@@ -28,5 +28,6 @@ MainView.Space=Space
 MainView.Speed=Speed
 MainView.StarName=Star name
 MainView.Stopbits=Stopbits
+MainView.Title=Project P1
 MainView.XONXOFF_IN=XONXOFF IN
 MainView.XONXOFF_OUT=XONXOFF OUT
