Translation for the constellation's name

--- a/projetp1/src/com/github/projetp1/messages_en.properties
+++ b/projetp1/src/com/github/projetp1/messages_en.properties
@@ -32,3 +32,91 @@ MainView.Stopbits=Stopbits
 MainView.Title=Project P1
 MainView.XONXOFF_IN=XONXOFF IN
 MainView.XONXOFF_OUT=XONXOFF OUT
+MainView.Const_And=Andromeda
+MainView.Const_Ant=Antlia
+MainView.Const_Aps=Apus
+MainView.Const_Aql=Aquila
+MainView.Const_Aqr=Aquarius
+MainView.Const_Ara=Ara
+MainView.Const_Ari=Aries
+MainView.Const_Aur=Auriga
+MainView.Const_Boo=Boötes
+MainView.Const_Cae=Caelum
+MainView.Const_Cam=Camelopardalis
+MainView.Const_Cap=Capricornus
+MainView.Const_Car=Carina
+MainView.Const_Cas=Cassiopeia
+MainView.Const_Cen=Centaurus
+MainView.Const_Cep=Cepheus
+MainView.Const_Cet=Cetus
+MainView.Const_Cha=Chamaeleon
+MainView.Const_Cir=Circinus
+MainView.Const_CMa=Canis Major
+MainView.Const_CMi=Canis Minor
+MainView.Const_Cnc=Cancer
+MainView.Const_Col=Columba
+MainView.Const_Com=Chevelure de Bérénice
+MainView.Const_CrA=Corona Australis
+MainView.Const_CrB=Corona Borealis
+MainView.Const_Crt=Crater
+MainView.Const_Cru=Crux
+MainView.Const_Crv=Corvus
+MainView.Const_CVn=Canes Venatici
+MainView.Const_Cyg=Cygnus
+MainView.Const_Del=Delphinus
+MainView.Const_Dor=Dorado
+MainView.Const_Dra=Draco
+MainView.Const_Equ=Equuleus
+MainView.Const_Eri=Eridanus
+MainView.Const_For=Fornax
+MainView.Const_Gem=Gemini
+MainView.Const_Gru=Grus
+MainView.Const_Her=Hercules
+MainView.Const_Hor=Horologium
+MainView.Const_Hya=Hydra
+MainView.Const_Hyi=Hydrus
+MainView.Const_Ind=Indus
+MainView.Const_Lac=Lacerta
+MainView.Const_Leo=Leo
+MainView.Const_Lep=Lepus
+MainView.Const_Lib=Libra
+MainView.Const_LMi=Leo Minor
+MainView.Const_Lup=Lupus
+MainView.Const_Lyn=Lynx
+MainView.Const_Lyr=Lyra
+MainView.Const_Men=Mensa
+MainView.Const_Mic=Microscopium
+MainView.Const_Mon=Monoceros
+MainView.Const_Mus=Musca
+MainView.Const_Nor=Norma
+MainView.Const_Oct=Octans
+MainView.Const_Oph=Ophiuchus
+MainView.Const_Ori=Orion
+MainView.Const_Pav=Pavo
+MainView.Const_Peg=Pegasus
+MainView.Const_Per=Perseus
+MainView.Const_Phe=Phoenix
+MainView.Const_Pic=Pictor
+MainView.Const_PsA=Piscis Austrinus
+MainView.Const_Psc=Pisces
+MainView.Const_Pup=Puppis
+MainView.Const_Pyx=Pyxis
+MainView.Const_Ret=Reticulum
+MainView.Const_Scl=Sculptor
+MainView.Const_Sco=Scorpius
+MainView.Const_Sct=Scutum
+MainView.Const_Ser=Serpens
+MainView.Const_Sex=Sextans
+MainView.Const_Sge=Sagitta
+MainView.Const_Sgr=Sagittarius
+MainView.Const_Tau=Taurus
+MainView.Const_Tel=Telescopium
+MainView.Const_TrA=Triangulum Australe
+MainView.Const_Tri=Triangulum
+MainView.Const_Tuc=Tucana
+MainView.Const_UMa=Ursa Major
+MainView.Const_UMi=Ursa Minor
+MainView.Const_Vel=Vela
+MainView.Const_Vir=Virgo
+MainView.Const_Vol=Volans
+MainView.Const_Vul=Vulpecula
