Translation for the constellation's name

--- a/projetp1/src/com/github/projetp1/messages_fr.properties
+++ b/projetp1/src/com/github/projetp1/messages_fr.properties
@@ -31,3 +31,124 @@ MainView.Stopbits=Bits d'arrêt
 MainView.Title=Projet P1
 MainView.XONXOFF_IN=XONXOFF IN
 MainView.XONXOFF_OUT=XONXOFF OUT
+MainView.Colour=Couleur
+MainView.DatabaseName=Base de données
+MainView.Databits=Bits de données
+MainView.DegreesNorth=\ °N 
+MainView.DegreesSouth=\ °S
+MainView.DistanceToEarth=Distance (Terre)
+MainView.Even=Paire
+MainView.FlowControl=Contrôle de flux
+MainView.Help=Aide
+MainView.HelpText=<html>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet, nisi<br />ornare molestie tempor, tellus mi dictum erat, at sagittis nunc dolor pulvinar justo.<br />Vivamus ullamcorper, arcu non laoreet suscipit, risus ligula consequat sapien, in<br />tempus turpis<br />elit imperdiet dolor. Proin elit augue, facilisis eu luctus at, pellentesque id tortor.<br />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sit amet imperdiet<br />libero. Etiam sagittis lorem non tellus mollis tristique. In euismod commodo nibh in<br />ultrices.<br /></html>
+MainView.InputDelimiter=Délimiteur d'entrée
+MainView.LY=\ al
+MainView.Magnitude=Magnitude
+MainView.Mark=Marquer
+MainView.None=Aucun
+MainView.NoResult=Aucun résultat n'a été trouvé dans la base de données
+MainView.Odd=Impaire
+MainView.Off=Arrêt
+MainView.On=Actif
+MainView.Parity=Parité
+MainView.Port=Port
+MainView.RTSCTS_IN=RTSCTS IN
+MainView.RTSCTS_OUT=RTSCTS OUT
+MainView.SamplingRate=Taux d'échatillonage
+MainView.Settings=Paramètres
+MainView.Simulation=Simulation
+MainView.Space=Espace
+MainView.Speed=Vitesse de transmission
+MainView.StarName=Nom de l'astre
+MainView.Stopbits=Bits d'arrêt
+MainView.Title=Projet P1
+MainView.XONXOFF_IN=XONXOFF IN
+MainView.XONXOFF_OUT=XONXOFF OUT
+MainView.Const_And=Andromède
+MainView.Const_Ant=Machine pneumatique
+MainView.Const_Aps=Oiseau de paradis
+MainView.Const_Aql=Aigle
+MainView.Const_Aqr=Verseau
+MainView.Const_Ara=Autel
+MainView.Const_Ari=Bélier
+MainView.Const_Aur=Cocher
+MainView.Const_Boo=Bouvier
+MainView.Const_Cae=Burin
+MainView.Const_Cam=Girafe
+MainView.Const_Cap=Capricorne
+MainView.Const_Car=Carène
+MainView.Const_Cas=Cassiopée
+MainView.Const_Cen=Centaure
+MainView.Const_Cep=Céphée
+MainView.Const_Cet=Baleine
+MainView.Const_Cha=Caméléon
+MainView.Const_Cir=Compas
+MainView.Const_CMa=Grand Chien
+MainView.Const_CMi=Petit Chien
+MainView.Const_Cnc=Cancer
+MainView.Const_Col=Colombe
+MainView.Const_Com=Chevelure de Bérénice
+MainView.Const_CrA=Couronne australe
+MainView.Const_CrB=Couronne boréale
+MainView.Const_Crt=Coupe
+MainView.Const_Cru=Croix du Sud
+MainView.Const_Crv=Corbeau
+MainView.Const_CVn=Chiens de chasse
+MainView.Const_Cyg=Cygne
+MainView.Const_Del=Dauphin
+MainView.Const_Dor=Dorade
+MainView.Const_Dra=Dragon
+MainView.Const_Equ=Petit Cheval
+MainView.Const_Eri=Éridan
+MainView.Const_For=Fourneau
+MainView.Const_Gem=Gémeaux
+MainView.Const_Gru=Grue
+MainView.Const_Her=Hercule
+MainView.Const_Hor=Horloge
+MainView.Const_Hya=Hydre
+MainView.Const_Hyi=Hydre mâle
+MainView.Const_Ind=Indien
+MainView.Const_Lac=Lézard
+MainView.Const_Leo=Lion
+MainView.Const_Lep=Lièvre
+MainView.Const_Lib=Balance
+MainView.Const_LMi=Petit Lion
+MainView.Const_Lup=Loup
+MainView.Const_Lyn=Lynx
+MainView.Const_Lyr=Lyre
+MainView.Const_Men=Table
+MainView.Const_Mic=Microscope
+MainView.Const_Mon=Licorne
+MainView.Const_Mus=Mouche
+MainView.Const_Nor=Règle
+MainView.Const_Oct=Octant
+MainView.Const_Oph=Ophiuchus
+MainView.Const_Ori=Orion
+MainView.Const_Pav=Paon
+MainView.Const_Peg=Pégase
+MainView.Const_Per=Persée
+MainView.Const_Phe=Phénix
+MainView.Const_Pic=Peintre
+MainView.Const_PsA=Poisson austral
+MainView.Const_Psc=Poissons
+MainView.Const_Pup=Poupe
+MainView.Const_Pyx=Boussole
+MainView.Const_Ret=Réticule
+MainView.Const_Scl=Sculpteur
+MainView.Const_Sco=Scorpion
+MainView.Const_Sct=Écu de Sobieski
+MainView.Const_Ser=Serpent
+MainView.Const_Sex=Sextant
+MainView.Const_Sge=Flèche
+MainView.Const_Sgr=Sagittaire
+MainView.Const_Tau=Taureau
+MainView.Const_Tel=Télescope
+MainView.Const_TrA=Triangle austral
+MainView.Const_Tri=Triangle
+MainView.Const_Tuc=Toucan
+MainView.Const_UMa=Grande Ourse
+MainView.Const_UMi=Petite Ourse
+MainView.Const_Vel=Voiles
+MainView.Const_Vir=Vierge
+MainView.Const_Vol=Poisson volant
+MainView.Const_Vul=Petit Renard
