amélioration de l'affichage des infos de l'étoile petite correction de la barre de recherche
Signed-off-by: Issa Barbier <issa.barbier@gmail.com>

--- a/projetp1/src/com/github/projetp1/messages_fr.properties
+++ b/projetp1/src/com/github/projetp1/messages_fr.properties
@@ -1,3 +1,4 @@
+MainView.CatalogNumber=Numéro du catalogue
 MainView.Colour=Couleur
 MainView.DatabaseName=Base de données
 MainView.Databits=Bits de données
