Rename Projet P1 to Star^2 + Change the icon

--- a/projetp1/src/com/github/projetp1/messages_en.properties
+++ b/projetp1/src/com/github/projetp1/messages_en.properties
@@ -29,7 +29,7 @@ MainView.Space=Space
 MainView.Speed=Speed
 MainView.StarName=Star name
 MainView.Stopbits=Stopbits
-MainView.Title=Project P1
+MainView.Title=Star²
 MainView.XONXOFF_IN=XONXOFF IN
 MainView.XONXOFF_OUT=XONXOFF OUT
 MainView.Const_And=Andromeda
