--- a/projetp1/src/com/github/projetp1/messages_fr.properties
+++ b/projetp1/src/com/github/projetp1/messages_fr.properties
@@ -32,7 +32,7 @@ MainView.Stopbits=Bits d'arrêt
 MainView.Title=Star²
 MainView.XONXOFF_IN=XONXOFF IN
 MainView.XONXOFF_OUT=XONXOFF OUT
-MainView.Const_And=Androbide
+MainView.Const_And=Andromède
 MainView.Const_Ant=Machine pneumatique
 MainView.Const_Aps=Oiseau de paradis
 MainView.Const_Aql=Aigle
