--- a/projetp1/src/com/github/projetp1/messages_en.properties
+++ b/projetp1/src/com/github/projetp1/messages_en.properties
@@ -54,7 +54,7 @@ MainView.Const_CMa=Canis Major
 MainView.Const_CMi=Canis Minor
 MainView.Const_Cnc=Cancer
 MainView.Const_Col=Columba
-MainView.Const_Com=Chevelure de Bérénice
+MainView.Const_Com=Coma Berenices
 MainView.Const_CrA=Corona Australis
 MainView.Const_CrB=Corona Borealis
 MainView.Const_Crt=Crater
