--- a/projetp1/src/com/github/projetp1/messages_en.properties
+++ b/projetp1/src/com/github/projetp1/messages_en.properties
@@ -1,5 +1,6 @@
 MainView.CatalogNumber=Catalog number
 MainView.Colour=Colour
+MainView.Constellation=Constellation
 MainView.DatabaseName=Database name
 MainView.Databits=Databits
 MainView.DegreesNorth=\ °N
