--- a/projetp1/src/com/github/projetp1/messages_fr.properties
+++ b/projetp1/src/com/github/projetp1/messages_fr.properties
@@ -1,5 +1,6 @@
 MainView.CatalogNumber=Numéro du catalogue
 MainView.Colour=Couleur
+MainView.Constellation=Constellation
 MainView.DatabaseName=Base de données
 MainView.Databits=Bits de données
 MainView.DegreesNorth=\ °N 
