Popup au changement de port

--- a/projetp1/src/com/github/projetp1/messages_en.properties
+++ b/projetp1/src/com/github/projetp1/messages_en.properties
@@ -1,4 +1,5 @@
 MainView.CatalogNumber=Catalog number
+MainView.ChangePortImpossible=The port will be changed the next time the program starts.
 MainView.Colour=Colour
 MainView.Constellation=Constellation
 MainView.DatabaseName=Database name
@@ -21,6 +22,7 @@ MainView.Off=Off
 MainView.On=On
 MainView.Parity=Parity
 MainView.Port=Port
+MainView.PortChange=Port change
 MainView.RTSCTS_IN=RTSCTS IN
 MainView.RTSCTS_OUT=RTSCTS OUT
 MainView.SamplingRate=Sampling rate
