--- a/projetp1/src/com/github/projetp1/messages_fr.properties
+++ b/projetp1/src/com/github/projetp1/messages_fr.properties
@@ -1,4 +1,5 @@
 MainView.CatalogNumber=Numéro du catalogue
+MainView.ChangePortImpossible=Le changement de port interviendra au prochain démarrage du programme.
 MainView.Colour=Couleur
 MainView.Constellation=Constellation
 MainView.DatabaseName=Base de données
@@ -21,6 +22,7 @@ MainView.Off=Arrêt
 MainView.On=Actif
 MainView.Parity=Parité
 MainView.Port=Port
+MainView.PortChange=Changement de port
 MainView.RTSCTS_IN=RTSCTS IN
 MainView.RTSCTS_OUT=RTSCTS OUT
 MainView.SamplingRate=Taux d'échatillonage
