Add some popups in places where there could be problems.

--- a/projetp1/src/com/github/projetp1/messages_en.properties
+++ b/projetp1/src/com/github/projetp1/messages_en.properties
@@ -1,3 +1,9 @@
+DataBase.ErrorOpening=Error
+DataBase.ErrorOpeningMessage=Cannot open a connection to the database. Please verify that the database file is in the classpath.
+DataBase.NoDriver=JDBC driver error
+DataBase.NoDriverMessage=Cannot load the SQLite JDBC driver. Please verify that the driver is in the classpath.
+DataBase.NoExecQ=SQL Error
+DataBase.NoExecQMessage=Cannot execute SQL queries !
 MainView.CatalogNumber=Catalog number
 MainView.ChangePortImpossible=The port will be changed the next time the program starts.
 MainView.Colour=Colour
@@ -123,3 +129,9 @@ MainView.Const_Vel=Vela
 MainView.Const_Vir=Virgo
 MainView.Const_Vol=Volans
 MainView.Const_Vul=Vulpecula
+Pic.NoPort=No port found
+Pic.NoPortMessage=We didn't find any serial port on your computer. The program will be in simulation mode.
+Pic.ErrorMessage=We didn't succeed in opening the serial port. Here's the error:
+Pic.Error=Serial port error
+Settings.NoWrite=Settings file write error
+Settings.NoWriteMessage=We couldn't save the settings file, please verify that settings.conf is writable.
