Add the help text in French+English

--- a/projetp1/src/com/github/projetp1/messages_en.properties
+++ b/projetp1/src/com/github/projetp1/messages_en.properties
@@ -16,7 +16,7 @@ MainView.DistanceToEarth=Distance to Earth
 MainView.Even=Even
 MainView.FlowControl=Flow control
 MainView.Help=Help
-MainView.HelpText=<html>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet, nisi<br />ornare molestie tempor, tellus mi dictum erat, at sagittis nunc dolor pulvinar justo.<br />Vivamus ullamcorper, arcu non laoreet suscipit, risus ligula consequat sapien, in<br />tempus turpis<br />elit imperdiet dolor. Proin elit augue, facilisis eu luctus at, pellentesque id tortor.<br />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sit amet imperdiet<br />libero. Etiam sagittis lorem non tellus mollis tristique. In euismod commodo nibh in<br />ultrices.<br /></html>
+MainView.HelpText=<html><ul><li><u>Searching</u></li><p>To begin a search, type an exclamation mark (!) in the search bar up right. A list of accepted keywords will be presented to you.<br />When you chose a keyword, you may then enter your search text. A list of matching items will be provided. You can chose an item by clicking on it.If you want to add a search criteria, you have to repeat the operation after a semicolon (;).To begin searching, press the "Enter" key on your keyboard. To stop searching, click on the cross located on the right of the search bar.</p><li><u>Click on a star</u></li><p>When you select a star with your mouse, information about it will be shown on the left of the screen.</p><li><u>Settings</u></li><p>In the settings window, you can configure how the serial communication between the computer and the pointer is set.</p></ul></html>
 MainView.InputDelimiter=Input delimiter
 MainView.LY=\ ly
 MainView.Magnitude=Magnitude
